--- a/package.json
+++ b/package.json
@@ -1,60 +1,68 @@
 {
-  "name": "express-app-template",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {
-    "start": "node dist/server.js",
-    "build": "tsc",
-    "format:fix": "npx prettier . --write",
-    "format:check": "npx prettier . --check",
-    "dev": "tsx watch src/server.ts",
-    "lint:check": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "test": "jest --runInBand",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "prepare": "husky"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gautam-629/express-app-template.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/gautam-629/express-app-template/issues"
-  },
-  "homepage": "https://github.com/gautam-629/express-app-template#readme",
-  "devDependencies": {
-    "@eslint/js": "^9.16.0",
-    "@types/express": "^5.0.0",
-    "@types/http-errors": "^2.0.4",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^22.10.1",
-    "@types/supertest": "^6.0.2",
-    "eslint": "^9.16.0",
-    "husky": "^9.1.7",
-    "jest": "^29.7.0",
-    "lint-staged": "^15.2.10",
-    "prettier": "3.4.1",
-    "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.17.0"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "npm run format:fix",
-      "npm run lint:fix"
-    ]
-  },
-  "dependencies": {
-    "dotenv": "^16.4.7",
-    "express": "^4.21.1",
-    "http-errors": "^2.0.0",
-    "winston": "^3.17.0"
-  }
+   "name": "express-app-template",
+   "version": "1.0.0",
+   "description": "",
+   "scripts": {
+      "start": "ts-node src/index.ts",
+      "build": "tsc",
+      "format:fix": "npx prettier . --write",
+      "format:check": "npx prettier . --check",
+      "dev": "cross-env NODE_ENV=dev watch src/server.ts",
+      "lint:check": "eslint .",
+      "lint:fix": "eslint . --fix",
+      "test": "jest --runInBand",
+      "test:watch": "jest --watch",
+      "test:coverage": "jest --coverage",
+      "prepare": "husky",
+      "typeorm": "typeorm-ts-node-commonjs",
+      "migration:generate": "typeorm-ts-node-commonjs migration:generate",
+      "migration:run": "typeorm-ts-node-commonjs migration:run",
+      "migration:create": "typeorm-ts-node-commonjs migration:create"
+   },
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/gautam-629/express-app-template.git"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "bugs": {
+      "url": "https://github.com/gautam-629/express-app-template/issues"
+   },
+   "homepage": "https://github.com/gautam-629/express-app-template#readme",
+   "devDependencies": {
+      "@eslint/js": "^9.16.0",
+      "@types/express": "^5.0.0",
+      "@types/http-errors": "^2.0.4",
+      "@types/jest": "^29.5.14",
+      "@types/node": "^16.18.121",
+      "@types/supertest": "^6.0.2",
+      "eslint": "^9.16.0",
+      "husky": "^9.1.7",
+      "jest": "^29.7.0",
+      "lint-staged": "^15.2.10",
+      "prettier": "3.4.1",
+      "supertest": "^7.0.0",
+      "ts-jest": "^29.2.5",
+      "ts-node": "10.9.1",
+      "tsx": "^4.19.2",
+      "typescript": "4.5.2",
+      "typescript-eslint": "^8.17.0"
+   },
+   "lint-staged": {
+      "*.{js,jsx,ts,tsx}": [
+         "npm run format:fix",
+         "npm run lint:fix"
+      ]
+   },
+   "dependencies": {
+      "cross-env": "^7.0.3",
+      "dotenv": "^16.4.7",
+      "express": "^4.21.1",
+      "http-errors": "^2.0.0",
+      "pg": "^8.13.1",
+      "reflect-metadata": "^0.1.14",
+      "typeorm": "^0.3.20",
+      "winston": "^3.17.0"
+   }
 }
