--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "format:fix": "npx prettier . --write",
     "format:check": "npx prettier . --check",
-    "dev": "cross-env NODE_ENV=dev watch src/server.ts",
+    "dev": "cross-env NODE_ENV=dev nodemon src/server.ts",
     "lint:check": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "jest --runInBand",
@@ -41,6 +41,7 @@
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.10",
+    "nodemon": "^3.1.7",
     "prettier": "3.4.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
