--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/server.ts",
     "build": "tsc",
     "format:fix": "npx prettier . --write",
     "format:check": "npx prettier . --check",
@@ -35,7 +35,7 @@
     "@types/express": "^5.0.0",
     "@types/http-errors": "^2.0.4",
     "@types/jest": "^29.5.14",
-    "@types/node": "^16.18.121",
+    "@types/node": "^22.10.1",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.16.0",
     "husky": "^9.1.7",
@@ -47,7 +47,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "10.9.1",
     "tsx": "^4.19.2",
-    "typescript": "4.5.2",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^8.17.0"
   },
   "lint-staged": {
