chage ubuntu version

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,14 +9,16 @@ on:
 jobs:
   build-and-test:
     name: Build the project
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     # if: github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: npm ci
       - name: Run eslint
-        run: npm run lint
+        run: npm run lint:fix
+      - name: Test and coverage
+        run: npm run test
         env:
           DB_HOST: ${{ secrets.TEST_DB_HOST }}
           DB_PORT: ${{ secrets.TEST_DB_PORT }}
@@ -35,7 +37,7 @@ jobs:
   build-and-push-docker:
     name: Build and Push Docker Image
     needs: build-and-test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     env:
       IMAGE_NAME: gautam629/mernstack_auth_service # codersgyan/mernstack_auth_service:build-2
       IMAGE_TAG: build-${{ github.run_number }}
